<resources>
    <string name="app_name">SiMPEL</string>
    <string name="FCM_REF">com.example.win10.simpelv.fcm_pref</string>
    <string name="FCM_TOKEN">com.example.win10.simpelv.fcm_token</string>

    <string name="home">Home</string>
    <string name="suratmasuk">Surat Masuk</string>
    <string name="disposisimasuk">Disposisi Masuk</string>
    <string name="konsep">Konsep</string>
    <string name="disposisikeluar">Disposisi Keluar</string>
    <string name="personal">Personal</string>
    <string name="TTS">Tanda Tangan Surat</string>
    <string name="next">LANJUT</string>
    <string name="skip">LEWATI</string>
    <string name="start">MULAI</string>
    <string name="underline"><u>Logout</u></string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>


    <string name="slide_1_title">CEPAT</string>
    <string name="slide_1_desc">Rasakan Pengiriman Surat Dengan Sangat Cepat dan Struktural</string>

    <string name="slide_2_title">EFEKTIFITAS</string>
    <string name="slide_2_desc">Dapat Digunakan Dimanapun Dengan Menggunakan Koneksi Internet</string>


    <string name="slide_4_title">GO GREEN OFFICE</string>
    <string name="slide_4_desc">Mengurangi Penggunaan Kertas Serta Tumpukan Arsip yang Tidak Digunakan</string>
    <string name="title_activity_pass_phrase">PassPhrase</string>


</resources>
