<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">




    <item
        android:id="@+id/suratmasuk_menu"
        android:title="@string/suratmasuk"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_email_black_24dp"/>
    <item
        android:id="@+id/disposisimasuk_menu"
        android:enabled="true"
        android:title="@string/disposisimasuk"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_disposisi"/>
    <item
        android:id="@+id/home_menu"
        android:title="@string/home"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_home_black_24dp"/>
    <item
        android:id="@+id/disposisikeluar_menu"
        android:title="@string/disposisikeluar"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/ic_present_to_all_black_24dp"/>
    <item
        android:id="@+id/personal_menu"
        android:title="@string/personal"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_account_box_black_24dp"/>
</menu>
